@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.2 2018/05/10 00:09:29 minskim Exp $
+$NetBSD: distinfo,v 1.3 2019/07/31 14:36:45 brook Exp $
 
-SHA1 (R/RSQLite_2.1.1.tar.gz) = ed4ffd85a72685205f0bc651c5d25b539f788339
-RMD160 (R/RSQLite_2.1.1.tar.gz) = 49e94c10233030e46f8953965e10ad8fdc015d7a
-SHA512 (R/RSQLite_2.1.1.tar.gz) = c488c61cb587617d40af8e622dd5598c98173fce5569a22ec74032a515199af54361045c40bbf20425e8bbfe601d1c5496fa6056f9425eabc5590737a331810b
-Size (R/RSQLite_2.1.1.tar.gz) = 2192835 bytes
+SHA1 (R/RSQLite_2.1.2.tar.gz) = 2d2b3f2dff51c759ef52557d4b17aabb8267f4fa
+RMD160 (R/RSQLite_2.1.2.tar.gz) = 9591a29336c586a4da21d8f37487ba9743f3b3fe
+SHA512 (R/RSQLite_2.1.2.tar.gz) = 1009a37da7d4c2f5c7385c39bcce3c9c1188f47b1877a4f48c5c2c963242b874afa6d2e9f4e3f575e39c8eb092c0c027bb589dbdb8971ceabd155c8a33946754
+Size (R/RSQLite_2.1.2.tar.gz) = 2360815 bytes
